--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^5.4.1"
 coverage = {extras = ["toml"], version = "^5.0.4"}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
+flake8 = "^3.7.9"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
