--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,19 @@ python = "^3.7"
 click = "^7.1.1"
 requests = "^2.23.0"
 
+
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
 coverage = {extras = ["toml"], version = "^5.0.4"}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
 flake8 = "^3.7.9"
+black = "^19.10b0"
+flake8-bandit = "^2.1.2"
+flake8-black = "^0.1.1"
+flake8-bugbear = "^20.1.4"
+flake8-import-order = "^0.18.1"
+safety = "^1.8.7"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
