--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ keywords = ["hypermodern"]
 python = "^3.7"
 click = "^7.1.1"
 requests = "^2.23.0"
+desert = "^2020.1.6"
+marshmallow = "^3.5.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -27,6 +29,10 @@ flake8-black = "^0.1.1"
 flake8-bugbear = "^20.1.4"
 flake8-import-order = "^0.18.1"
 safety = "^1.8.7"
+mypy = "^0.770"
+pytype = {version = "^2020.3.19", python = "3.7"}
+typeguard = "^2.7.1"
+flake8-annotations = "^2.0.1"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
