mypy ignores _pytest imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 
-[mypy-desert,marshmallow,nox.*,pytest, pytest-mock]
+[mypy-desert,marshmallow,nox.*,pytest, pytest-mock, _pytest.*]
 ignore_missing_imports = True
