--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ mypy = "^0.770"
 pytype = {version = "^2020.3.19", python = "3.7"}
 typeguard = "^2.7.1"
 flake8-annotations = "^2.0.1"
+flake8-docstrings = "^1.5.0"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
