--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ flake8-annotations = "^2.0.1"
 flake8-docstrings = "^1.5.0"
 darglint = "^1.2.2"
 xdoctest = "^0.12.0"
+sphinx = "^3.0.1"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
