--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ flake8-docstrings = "^1.5.0"
 darglint = "^1.2.2"
 xdoctest = "^0.12.0"
 sphinx = "^3.0.1"
+sphinx-autodoc-typehints = "^1.10.3"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
