--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ darglint = "^1.2.2"
 xdoctest = "^0.12.0"
 sphinx = "^3.0.1"
 sphinx-autodoc-typehints = "^1.10.3"
+codecov = "^2.0.22"
 
 [tool.poetry.scripts]
 hmtest = "hmtest.console:main"
